--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@expo/webpack-config": "^0.17.2",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
+    "@sinonjs/fake-timers": "^10.0.2",
     "axios": "^1.2.1",
+    "dayjs": "^1.11.7",
     "expo": "~47.0.8",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
