--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-dropdown-select-list": "^2.0.4",
+    "react-native-image-picker": "^4.10.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-web": "~0.18.9"
+    "react-native-web": "~0.18.9",
+    "expo-image-picker": "~14.0.2"
   },
   "rnpm": {
     "assets": [
