--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo": "~47.0.8",
     "expo-app-loading": "~2.1.1",
     "expo-font": "~11.0.1",
+    "expo-image-picker": "~14.0.2",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
@@ -30,8 +31,7 @@
     "react-native-material-dropdown": "^0.11.1",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-web": "~0.18.9",
-    "expo-image-picker": "~14.0.2"
+    "react-native-web": "~0.18.9"
   },
   "rnpm": {
     "assets": [
